--- a/salt_self/src/index.css
+++ b/salt_self/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.my_self {
+    background-color:#119911;
+    /* transform:rotate(-5deg); */
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    font-weight: bold;
+    border: solid 5px #119911;
+    color: #ffffff;
+    width: 95%;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ps{
+  background-color:#ffffff;
+  color: #111111;
+  height:500px;
+  text-align: center;
+  width: 99%;
+}
+.my_self_text {
+    margin: 0; 
+    padding: 0;
 }
