--- a/salt_self/src/App/Salt3DCG/make3D.css
+++ b/salt_self/src/App/Salt3DCG/make3D.css
@@ -94,7 +94,6 @@
   padding: 8px 16px;
   font-size: 16px;
   width: 120px;
-
   text-align: center;
 }
 
@@ -135,8 +134,14 @@
 .surface_add_control {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  margin: 0px 10px 0px 10px;
+  justify-content: space-between;
+
+  align-items: center;
+  /* background-color: #ddeeff00; */
+
+  height: 30px;
+  margin: 0px 10px 5px 10px;
+  padding: 5px 10px 5px 10px;
 }
 
 .surface_add_button {
@@ -148,17 +153,19 @@
   background: rgba(200, 60, 60, 1);
   color: #ffffff;
   /* padding: 5px 0px 5px 16px; */
-  font-size: 15px;
-  margin: 0px 0px 0px 0px;
 
-  width: 20%;
+  margin: 0px 0px 0px 0px;
+  padding: 8px 16px;
+  font-size: 16px;
   height: 30px;
+  width: 120px;
   text-align: center;
 }
 
 .surface_add_select {
-  height: 30px;
   width: 180px;
+  height: 20px;
+  margin: 0px 0px 0px 0px;
 }
 
 /* https://coliss.com/articles/build-websites/operation/css/styling-the-good-old-button.html */
