--- a/salt_self/src/app.css
+++ b/salt_self/src/app.css
@@ -1,14 +1,8 @@
 :root {
   --header-height-max: 100px;
   --header-height-min: 20px;
+  --header-element-width: 500px;
 }
-
-body {
-  background-color: #ffffff;
-  margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
-}
-
 .mainView {
   margin: 0px 0px 0px 0px;
   padding: 0px 10px 0px 10px;
@@ -16,37 +10,10 @@ body {
   position: absolute;
   top: 100px;
 }
-
-header {
-  width: 100%;
-  height: var(--header-height-max);
-  background-color: #00ff7f;
+body {
+  background-color: #ffffff;
   margin: 0px 0px 0px 0px;
-
-  position: fixed;
-  top: 0;
-  left: 0px;
-  z-index: 99;
-
-  animation-fill-mode: forwards;
-  animation-duration: 1s;
-}
-
-@keyframes open_header {
-  0% {
-    height: var(--header-height-min);
-  }
-  100% {
-    height: var(--header-height-max);
-  }
-}
-@keyframes close_header {
-  0% {
-    height: var(--header-height-max);
-  }
-  100% {
-    height: var(--header-height-min);
-  }
+  padding: 0px 0px 0px 0px;
 }
 
 footer {
