--- a/salt_self/src/app_header_child.css
+++ b/salt_self/src/app_header_child.css
@@ -1,13 +1,17 @@
 .logo_main {
   width: var(--header-element-width); /* 横幅のサイズを指定    */
-  height: 100%; /*縦幅のサイズを指定    */
+  height: var(--header-height-logo); /*縦幅のサイズを指定    */
   background-color: #ffffff;
+  margin-left: 10px;
+  margin-right: 10px;
   /* z-index: 101; */
+
+  /* border-radius: 20%; */
 }
 
 .logo_text {
   width: var(--header-element-width); /* 幅指定 */
-  height: 100%; /* 高さ指定 */
+  height: var(--header-height-logo); /* 高さ指定 */
   margin: 0px;
   position: absolute;
   text-align: center;
@@ -22,26 +26,25 @@
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+
+  font-family: sans-serif;
+  font-weight: 300;
 }
 
 .logo_pic {
   position: absolute;
-  background-image: url(./koharu.png);
-  /* 画像のURLを指定       */
-  background-size: cover;
-  /* 画像のサイズを指定    */
-  background-position: 50% 25%;
 
   width: var(--header-element-width); /* 横幅のサイズを指定    */
-  height: 100%; /* 縦幅のサイズを指定    */
+  height: var(--header-height-logo); /* 縦幅のサイズを指定    */
   /* top: 0px; */
-  opacity: 1;
   margin: 0px;
 
   animation-fill-mode: forwards;
   animation-duration: 1s;
-}
 
+  opacity: var(--header-element-pic-opacity);
+}
+/* 
 @keyframes open_header_logo_pic {
   0% {
     opacity: 0;
@@ -57,4 +60,4 @@
   100% {
     opacity: 0;
   }
-}
+} */
