--- a/salt_self/src/app.css
+++ b/salt_self/src/app.css
@@ -1,24 +1,21 @@
 :root {
-  --header-height-max: 100px;
-  --header-height-min: 20px;
-  --header-element-width: 500px;
+  --header-height: 100px;
+  --header-height_logo: 80px;
+  --header-element-width: 100px;
+  --header-element-pic-opacity: 1;
 }
 .mainView {
   margin: 0px 0px 0px 0px;
-  padding: 0px 10px 0px 10px;
+  padding: 0px 0px 0px 0px;
   width: 100%;
   position: absolute;
   top: 100px;
+}
+.browseView {
+  padding: 0px 10px 0px 10px;
 }
 body {
   background-color: #ffffff;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
-}
-
-footer {
-  width: 100%;
-  height: 100px;
-  background-color: #007fff;
-  margin: 0px 0px 10px 0px;
 }
