--- a/salt_self/src/app.css
+++ b/salt_self/src/app.css
@@ -3,19 +3,41 @@
   --header-height_logo: 80px;
   --header-element-width: 100px;
   --header-element-pic-opacity: 1;
+
+  --footer-height: 100px;
+
+  --cursor_button: pointer;
+
+  /* cursor:--cursor_button; */
 }
 .mainView {
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
   width: 100%;
-  position: absolute;
+
   top: 100px;
+
+  position: relative;
 }
 .browseView {
   padding: 0px 10px 0px 10px;
+  min-height: 80vh;
 }
 body {
   background-color: #ffffff;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
+  font-family: "Noto Sans JP", sans-serif;
+}
+h1 {
+  font-size: 28px;
+}
+h2 {
+  font-size: 25px;
+}
+h3 {
+  font-size: 18px;
+}
+p {
+  font-size: 15px;
 }
