--- a/salt_self/src/app_footer.css
+++ b/salt_self/src/app_footer.css
@@ -1,9 +1,12 @@
 footer {
   width: 100%;
-  height: 100px;
+  height: var(--footer-height);
   background-color: #007fff;
   margin: 20px 0px 0px 0px;
   padding: 10px 0px 0px 0px;
+  /* 
+  position: absolute;
+  bottom: 0; */
 }
 
 footer > p {
