--- a/salt_self/src/App/SeatMemo/seat_memo.css
+++ b/salt_self/src/App/SeatMemo/seat_memo.css
@@ -22,7 +22,6 @@
 }
 
 .div_SingleSeatComponent {
-  background-color: rgb(255, 255, 255);
   text-align: center;
   width: 100px;
   height: 100px;
@@ -30,6 +29,8 @@
 
   margin-left: 5px;
   border-radius: 5px; /*ボックス角の丸み*/
+
+  cursor: var(--cursor_button);
 }
 
 .div_SingleSeatComponent > p {
@@ -40,6 +41,8 @@
   transform: translateY(-50%) translateX(-50%); /*要素の大きさの半分ずつを戻す*/
   -webkit-transform: translateY(-50%) translateX(-50%);
   margin: 0px;
+
+  user-select: none;
 }
 
 .div_ColumnsSeatComponent {
@@ -76,6 +79,8 @@
   font-size: 16px;
   /* width: 120px; */
   text-align: center;
+
+  cursor: var(--cursor_button);
 }
 .input_SeatMemo_init {
   background: rgb(40, 140, 200);
